Dependabot/gradle/org.springframework.boot 3.0.0 (#2928)
* Bump org.springframework.boot from 2.7.5 to 3.0.0

Bumps [org.springframework.boot](https://github.com/spring-projects/spring-boot) from 2.7.5 to 3.0.0.
- [Release notes](https://github.com/spring-projects/spring-boot/releases)
- [Commits](https://github.com/spring-projects/spring-boot/compare/v2.7.5...v3.0.0)

---
updated-dependencies:
- dependency-name: org.springframework.boot
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* WIP Spring Boot 3 upgrade

* Remove tests that check logs

* WIP

* try latest spring

* try latest spring

* Update Jenkinsfile_CNP

* update

* bump cloud starter, idam and reimport javax as jakarta

* Update cftlib and ccd sdk version

* Add slf4j2-mock for slf4j 2 mokcing

* Upgrade plugins and gradle version

* Add packages to SpringBootApplication annotation
Spring boot 3 has removed support for spring.factories add auto
configuration. As a workaround to avoid auto wiring issues, packages
need to be addedto SpringBootApplication annotation to register beans.
This link provides more info about the issue https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.0.0-M5-Release-Notes#auto-configuration-registration

* Fix checkstyleMain

* Add jvm args to open modules
Prior to Gradle 7.5, JDK modules java.base/java.util and java.base/java.lang were
automatically opened in test workers on JDK9+ by passing --add-opens CLI arguments.
This meant any tests were able to perform deep reflection on JDK internals without warning or failing
More details can be found here https://docs.gradle.org/current/userguide/upgrading_version_7.html#remove_test_add_opens

* Bump spring boot version and add spring boot gradle plugin

* Update dependencyCheck version, add suppression

* Upgrade gradle wrapper to 8.0.2

* Upgrade gradle version

* Fix l